# chronometer

./: .gitignore  CMakeLists.txt  README.md
.qoder/repowiki/zh/content/: API 参考文档.md  使用示例与最佳实践.md  快速开始.md  测试策略与质量保证.md  部署与集成指南.md  项目概述.md
.qoder/repowiki/zh/content/API 参考文档/: API 参考文档.md  高精度计时 - RDTSC 支持.md
.qoder/repowiki/zh/content/实现细节/: 单例模式实现.md  实现细节.md  异常处理机制.md  数据结构与算法.md  线程安全机制.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qoder/rules/: cpp_rule.md
cmake/: chronometer-config.cmake.in
example/: CMakeLists.txt  basic_usage.cpp
include/chronometer/: chronometer.hpp  rdtsc_clock.hpp
src/: chronometer.cpp  rdtsc_clock.cpp
test/: CMakeLists.txt  test_chronometer.cpp
